# multi_doc_rag

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/: dataset.md
notebooks/: features.md
src/helper/: doc_db.py  doc_loader.py
src/llm/: model.py  prompts.py
src/ui/: basic.py  chat_ui.py  doc_ui.py
